--- a/index.html
+++ b/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="top">
-        <div class="left">
-            <img src="logo_small_icon_only.png" alt="Logo" width="100px">
-            <img src="cog-solid.svg" alt="settings" width="25px">
-            <a href="" id="selectBook">
-                <img src="book-solid.svg" alt="book">
-            </a>
+      <div class="left">
+        <img src="logo_small_icon_only.png" alt="Logo" width="100px" />
+
+        <a href="settings.html">
+          <img src="cog-solid.svg" alt="settings" width="25px" />
+        </a>
+
+        <input type="file" id="files" style="display: none;""/>
+        <img src="/book-solid.svg" width="25px" alt="" onclick="document.getElementById('files').click()">
+      </div>
+      <div class="right">
+        <div class="navtxt">
+          <a href="index.html">Home</a>
+          <a href="account.html">Account</a>
         </div>
-        <div class="right">
-            <div class="navtxt">
-                <p>Home</p>
-                <p>About</p>
-            </div>
-        </div>
+      </div>
     </div>
 
     <div class="mainctx">
-        <div class="word"></div>
+      <div class="word"></div>
     </div>
 
     <script src="app.js"></script>
-    
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  </body>
 </html>
